@@ -7,6 +7,7 @@ export("anytime",
        "iso8601",
        "rfc2822",
        "rfc3339",
+       "yyyymmdd",
        "assertDate",
        "assertTime")
 importFrom("Rcpp", "evalCpp")
