@@ -1,3 +1,15 @@
+2017-10-11  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Rolled minor version
+
+	* tests/simpleTests.R: Additional test for yyyymmdd()
+
+2017-10-10  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/formats.R: Added yyyymmdd() converter even though it
+	represents a truly terrible format
+	* man/iso8601.Rd: Added documentation
+
 2017-10-09  Dirk Eddelbuettel  <edd@debian.org>
 
 	* tests/simpleTests.R: Additional test for anydate from integer
